--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.*",
-        "cviebrock/eloquent-sluggable": "1.0.*"
+        "illuminate/support": "4.*"
     },
     "autoload": {
         "classmap": [
